[tool.poetry]
name = "dados-api"
version = "0.1.0"
description = ""
authors = ["muriloeduardo199 <muriloeduardo1993@gmail.com>"]
readme = "README.md"
packages = [{include = "dados_api"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
